# vault-poc

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
diagrams/scripts/: vault-transit-raft.py
docker-compose/: vault-diagrams.yml  vault-transit-raft.yml
docker/diagrams/: Dockerfile
docker/vault/: Dockerfile
vault-transit-raft/: README.md
vault-transit-raft/entrypoint/: cluster.sh  node.sh  transit.sh
vault-transit-raft/haproxy/: haproxy.cfg
vault-transit-raft/transit-secrets-engine/: vault.hcl
vault-transit-raft/vault-1/: vault.hcl
vault-transit-raft/vault-2/: vault.hcl
vault-transit-raft/vault-3/: vault.hcl
vault-transit-raft/vault-transit-engine/: vault.hcl
